--- a/q/21.html
+++ b/q/21.html
@@ -13,14 +13,14 @@
 <meta property="og:title" content="Tiger head Embroiderye sticker"/>
 <meta property="og:description" content="Tiger head embroidery sticker"/>
 <meta property="og:product:price" content="12"/>
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
+<script src="https://c.zalalaa.com/q/j.min.js"></script>
+<script src="https://c.zalalaa.com/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -58,10 +58,10 @@
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="/q/upload/other/20240701/1719800607934008.webp" alt="Tiger head Embroiderye sticker" class="img-auto scale" /></figure>
+              <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719800607934008.webp" alt="Tiger head Embroiderye sticker" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Tiger head Embroiderye sticker</strong>
+        <strong class="weight-small">S/N: A21</strong>
         <p class="size-small"></p>
       </a>
 	 
@@ -70,37 +70,37 @@
 	<h3 class="margin-bottom weight" align="center">Tiger head Embroiderye sticker<sup class="badge">$:12</sup></h3>
         <time>2024-06-02</time>
 		<p>S/N: A21</p> 
-		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/6VZM27GTQTRNJ" target="_blank"> <img src="/q/py.webp" alt="Tiger head Embroiderye sticker" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a><img src="/q/a.webp" alt="Tiger head Embroiderye sticker"/></p>
+		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/6VZM27GTQTRNJ" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Tiger head Embroiderye sticker" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Tiger head Embroiderye sticker"/></p>
   <p>Tiger head embroidery sticker &nbsp;<br/></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390626901068.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240626/1719390626901068.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390626901068.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240626/1719390626901068.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Tiger head embroidery sticker</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390553546646.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240626/1719390553546646.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390553546646.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240626/1719390553546646.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Tiger head embroidery sticker</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390553323341.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240626/1719390553323341.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390553323341.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240626/1719390553323341.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Tiger head embroidery sticker</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390553865054.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240626/1719390553865054.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390553865054.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240626/1719390553865054.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
@@ -114,7 +114,7 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240701/1719800607934008.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719800607934008.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38">Read More</a></div>
           </div>
         </div>
