--- a/q/animal/index.html
+++ b/q/animal/index.html
@@ -9,14 +9,14 @@
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Hand sewn embroidery, three-dimensional embroidery, animal cloth stickers, hand nailed flower embroidery badges, cheongsam animals">
 <meta name="theme-color" content="#32CD32">
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
+<script src="https://c.zalalaa.com/q/j.min.js"></script>
+<script src="https://c.zalalaa.com/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -40,16 +40,32 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">9</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">16</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">11</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">15</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">Animal</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/33.html" title="Cartoon animal embroidery,2024-07-06 17:29:47">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240706/1720262794598324.webp"  alt="Cartoon animal embroidery" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">S/N: A33 <span class="text-danger">&#36;</span>:29.99</strong>
+        <p class="size-small flex-grow">Cartoon animal embroidery fabric patch cute bag decoration c···</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/32.html" title="Cartoon flower butterfly embroidered fabric patch,2024-07-06 15:21:51">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240706/1720251451442410.webp"  alt="Cartoon flower butterfly embroidered fabric patch" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">S/N: A32 <span class="text-danger">&#36;</span>:29.99</strong>
+        <p class="size-small flex-grow">Embroidered badges, cartoons, flowers, butterflies, embroide···</p>
+      </a>
       <a class="big-x3 flex flex-column" href="/q/31.html" title="Cute cartoon cat,2024-07-06 15:15:09">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720250443946766.webp"  alt="Cute cartoon cat" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240706/1720250443946766.webp"  alt="Cute cartoon cat" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A31 <span class="text-danger">&#36;</span>:9.99</strong>
@@ -57,7 +73,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/30.html" title="Cartoon Panda Cute Embroidered Cloth Sticker,2024-07-06 14:59:58">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720249515387478.webp"  alt="Cartoon Panda Cute Embroidered Cloth Sticker" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240706/1720249515387478.webp"  alt="Cartoon Panda Cute Embroidered Cloth Sticker" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A30 <span class="text-danger">&#36;</span>:9.99</strong>
@@ -65,7 +81,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/29.html" title="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch,2024-07-06 14:32:13">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720248862555502.webp"  alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240706/1720248862555502.webp"  alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A29 <span class="text-danger">&#36;</span>:19.99</strong>
@@ -73,7 +89,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/28.html" title="Cartoon Rabbit Astronaut,2024-07-06 09:42:46">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720230542547710.webp"  alt="Cartoon Rabbit Astronaut" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240706/1720230542547710.webp"  alt="Cartoon Rabbit Astronaut" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A28 <span class="text-danger">&#36;</span>:12.99</strong>
@@ -81,7 +97,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/27.html" title="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers,2024-07-06 08:35:35">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720226337562267.webp"  alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240706/1720226337562267.webp"  alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A27 <span class="text-danger">&#36;</span>:19.99</strong>
@@ -89,7 +105,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/26.html" title="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch,2024-07-05 19:20:43">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240705/1720178843729859.webp"  alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240705/1720178843729859.webp"  alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A26 <span class="text-danger">&#36;</span>:19.99</strong>
@@ -97,15 +113,15 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/25.html" title="Cute cartoon puppy embroidered fabric patch for down jacket,2024-07-05 17:55:53">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240705/1720173688785484.webp"  alt="Cute cartoon puppy embroidered fabric patch for down jacket" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240705/1720173688785484.webp"  alt="Cute cartoon puppy embroidered fabric patch for down jacket" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">S/N: A25 <span class="text-danger">&#36;</span>:19.99</strong>
+        <strong class="weight-small">S/N: A25 <span class="text-danger">&#36;</span>:29.99</strong>
         <p class="size-small flex-grow">Cute cartoon puppy embroidered fabric patch for down jacketH···</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800607934008.webp"  alt="Tiger head Embroiderye sticker" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240701/1719800607934008.webp"  alt="Tiger head Embroiderye sticker" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A21 <span class="text-danger">&#36;</span>:12</strong>
@@ -113,7 +129,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800457809732.webp"  alt="Skull cloth patch" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240701/1719800457809732.webp"  alt="Skull cloth patch" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A20 <span class="text-danger">&#36;</span>:12</strong>
