--- a/q/contact/index.html
+++ b/q/contact/index.html
@@ -8,14 +8,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
 <meta name="theme-color" content="#32CD32">
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
+<script src="https://c.zalalaa.com/q/j.min.js"></script>
+<script src="https://c.zalalaa.com/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -44,7 +44,7 @@
     <div class="big-x4">
       <a class="padding block text-white discovers-main" href="/q/logo.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-           <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/logo.webp" alt="contacts" class="img-auto scale" /> </figure>
+           <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/logo.webp" alt="contacts" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-search-bg text-main"></i></div>
         </div>
         <strong class="weight-small">contacts</strong>
@@ -52,7 +52,24 @@
       </a>
     </div>
     <div class="big-x8">
-      <p>Email: web@zalalaa.com</p><p>Q Q: 9050150</p><p><img src="/q/wx.webp" width="200" height="200"/></p><p>WeChat:qq9050150<br/></p><p>Address:NO.5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China <br/></p><p><br/></p>
+      <p>
+    Email: web@zalalaa.com
+</p>
+<p>
+    Q Q: 9050150
+</p>
+<p>
+    <img src="https://c.zalalaa.com/q/wx.webp" width="200" height="200"/>
+</p>
+<p>
+    WeChat:qq9050150<br/>
+</p>
+<p>
+    Address:NO.5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China <br/>
+</p>
+<p>
+    <br/>
+</p>
     </div>
   </div>
    <div class="grid big-grid-middle large-grid-large isplit-content">
