--- a/q/13.html
+++ b/q/13.html
@@ -13,14 +13,14 @@
 <meta property="og:title" content="Embroidery flower bud lace flower applique"/>
 <meta property="og:description" content="Embroidery flower bud lace flower applique size: 30cm * 25cmgum : None, sewing is requiredcolor :This whitematerail :polyester yarn"/>
 <meta property="og:product:price" content="13.99"/>
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
+<script src="https://c.zalalaa.com/q/j.min.js"></script>
+<script src="https://c.zalalaa.com/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -58,10 +58,10 @@
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="/q/upload/other/20240630/1719760090198490.webp" alt="Embroidery flower bud lace flower applique" class="img-auto scale" /></figure>
+              <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240630/1719760090198490.webp" alt="Embroidery flower bud lace flower applique" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Embroidery flower bud lace flower applique</strong>
+        <strong class="weight-small">S/N: A13</strong>
         <p class="size-small"></p>
       </a>
 	 
@@ -70,44 +70,44 @@
 	<h3 class="margin-bottom weight" align="center">Embroidery flower bud lace flower applique<sup class="badge">$:13.99</sup></h3>
         <time>2024-06-10</time>
 		<p>S/N: A13</p> 
-		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/66VQAQ864YKHC" target="_blank"> <img src="/q/py.webp" alt="Embroidery flower bud lace flower applique" /> Buy Now <span class="text-danger">&#36;</span>:13.99</sup></a><img src="/q/a.webp" alt="Embroidery flower bud lace flower applique"/></p>
+		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/66VQAQ864YKHC" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidery flower bud lace flower applique" /> Buy Now <span class="text-danger">&#36;</span>:13.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Embroidery flower bud lace flower applique"/></p>
   <p>Embroidery flower bud lace flower applique <br/></p><p>size: 30cm * 25cm</p><p>gum : None, sewing is required</p><p>color :&nbsp;This white</p><p>materail :&nbsp;polyester yarn</p><p><br/></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390770601289.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240626/1719390770601289.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390770601289.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240626/1719390770601289.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidery flower bud lace flower applique</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390785541558.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240626/1719390785541558.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390785541558.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240626/1719390785541558.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidery flower bud lace flower applique</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390867604008.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240626/1719390867604008.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390867604008.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240626/1719390867604008.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidery flower bud lace flower applique</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390867142653.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240626/1719390867142653.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390867142653.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240626/1719390867142653.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidery flower bud lace flower applique</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390867968414.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240626/1719390867968414.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390867968414.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240626/1719390867968414.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
@@ -121,31 +121,31 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240626/1719391194190860.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240626/1719391194190860.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240701/1719800457809732.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719800457809732.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240630/1719760090198490.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240630/1719760090198490.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240701/1719800847146446.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719800847146446.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240701/1719800738209747.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719800738209747.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35">Read More</a></div>
           </div>
         </div>
