--- a/q/14.html
+++ b/q/14.html
@@ -13,14 +13,14 @@
 <meta property="og:title" content="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder"/>
 <meta property="og:description" content="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder"/>
 <meta property="og:product:price" content="29.99"/>
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
+<script src="https://c.zalalaa.com/q/j.min.js"></script>
+<script src="https://c.zalalaa.com/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -58,10 +58,10 @@
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="/q/upload/other/20240701/1719805636338260.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder" class="img-auto scale" /></figure>
+              <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719805636338260.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</strong>
+        <strong class="weight-small">S/N: A14</strong>
         <p class="size-small"></p>
       </a>
 	 
@@ -70,44 +70,44 @@
 	<h3 class="margin-bottom weight" align="center">Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder<sup class="badge">$:29.99</sup></h3>
         <time>2024-07-01</time>
 		<p>S/N: A14</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a><img src="/q/a.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder"/></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder"/></p>
   <p>Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719805685113949.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240701/1719805685113949.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719805685113949.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719805685113949.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Qipao Hanfu collar cloud shoulder</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/image/20240701/1719805749310038.jpg">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/image/20240701/1719805749310038.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240701/1719805749310038.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/image/20240701/1719805749310038.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Qipao Hanfu collar cloud shoulder</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/image/20240701/1719805749284150.jpg">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/image/20240701/1719805749284150.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240701/1719805749284150.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/image/20240701/1719805749284150.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Qipao Hanfu collar cloud shoulder</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/image/20240701/1719805749667374.jpg">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/image/20240701/1719805749667374.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240701/1719805749667374.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/image/20240701/1719805749667374.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Qipao Hanfu collar cloud shoulder</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/image/20240701/1719805749337888.jpg">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/image/20240701/1719805749337888.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240701/1719805749337888.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/image/20240701/1719805749337888.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Qipao Hanfu collar cloud shoulder</p>
@@ -121,7 +121,7 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240701/1719805636338260.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719805636338260.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/14.html" title="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46">Read More</a></div>
           </div>
         </div>
