--- a/q/25.html
+++ b/q/25.html
@@ -12,15 +12,15 @@
 <meta property="og:release_date" content="2024-07-05 17:55:53"/>
 <meta property="og:title" content="Cute cartoon puppy embroidered fabric patch for down jacket"/>
 <meta property="og:description" content="Cute cartoon puppy embroidered fabric patch for down jacket"/>
-<meta property="og:product:price" content="19.99"/>
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<meta property="og:product:price" content="29.99"/>
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
+<script src="https://c.zalalaa.com/q/j.min.js"></script>
+<script src="https://c.zalalaa.com/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -58,70 +58,70 @@
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="/q/upload/other/20240705/1720173688785484.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket" class="img-auto scale" /></figure>
+              <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240705/1720173688785484.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Cute cartoon puppy embroidered fabric patch for down jacket</strong>
+        <strong class="weight-small">S/N: A25</strong>
         <p class="size-small"></p>
       </a>
 	 
     </div>
     <div class="big-x8">
-	<h3 class="margin-bottom weight" align="center">Cute cartoon puppy embroidered fabric patch for down jacket<sup class="badge">$:19.99</sup></h3>
+	<h3 class="margin-bottom weight" align="center">Cute cartoon puppy embroidered fabric patch for down jacket<sup class="badge">$:29.99</sup></h3>
         <time>2024-07-05</time>
 		<p>S/N: A25</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket" /> Buy Now <span class="text-danger">&#36;</span>:19.99</sup></a><img src="/q/a.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket"/></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket"/></p>
   <p>Cute cartoon puppy embroidered fabric patch for down jacket</p><p><br/></p><p>Hot melt adhesive for cloth pasting</p><p><span style="text-wrap: nowrap;"><br/></span></p><p><span style="text-wrap: nowrap;">Complete set (17 styles in total) $:19.99</span></p><p><br/></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240705/1720173696904058.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240705/1720173696904058.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240705/1720173696904058.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240705/1720173696904058.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Puppy cloth patch</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240705/1720173696207767.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240705/1720173696207767.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240705/1720173696207767.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240705/1720173696207767.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Puppy cloth patch</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240705/1720173696640056.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240705/1720173696640056.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240705/1720173696640056.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240705/1720173696640056.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Puppy cloth patch</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240705/1720173696199481.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240705/1720173696199481.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240705/1720173696199481.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240705/1720173696199481.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Puppy cloth patch</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240705/1720173696771036.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240705/1720173696771036.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240705/1720173696771036.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240705/1720173696771036.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Puppy cloth patch</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/image/20240705/1720174019141747.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/image/20240705/1720174019141747.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240705/1720174019141747.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/image/20240705/1720174019141747.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Size in cm</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/image/20240705/1720174025907665.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/image/20240705/1720174025907665.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240705/1720174025907665.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/image/20240705/1720174025907665.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Size in cm</p>
