--- a/q/26.html
+++ b/q/26.html
@@ -13,14 +13,14 @@
 <meta property="og:title" content="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch"/>
 <meta property="og:description" content="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth PatchComplete set (6 styles in total) $:19.99Size in cm"/>
 <meta property="og:product:price" content="19.99"/>
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
+<script src="https://c.zalalaa.com/q/j.min.js"></script>
+<script src="https://c.zalalaa.com/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -58,10 +58,10 @@
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="/q/upload/other/20240705/1720178843729859.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch" class="img-auto scale" /></figure>
+              <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240705/1720178843729859.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch</strong>
+        <strong class="weight-small">S/N: A26</strong>
         <p class="size-small"></p>
       </a>
 	 
@@ -70,37 +70,37 @@
 	<h3 class="margin-bottom weight" align="center">New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch<sup class="badge">$:19.99</sup></h3>
         <time>2024-07-05</time>
 		<p>S/N: A26</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch" /> Buy Now <span class="text-danger">&#36;</span>:19.99</sup></a><img src="/q/a.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch"/></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch" /> Buy Now <span class="text-danger">&#36;</span>:19.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch"/></p>
   <p>New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch</p><p><span style="color: rgb(51, 51, 51); font-family: -apple-system, BlinkMacSystemFont, &quot;PingFang SC&quot;, &quot;Microsoft YaHei&quot;, simsun, &quot;Segoe UI&quot;, Roboto, &quot;Helvetica Neue&quot;, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; font-size: 18px; font-variant-ligatures: no-common-ligatures; background-color: rgb(255, 255, 255);">Complete set (6 styles in total) $:19.99</span></p><p></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240705/1720178898271490.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240705/1720178898271490.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240705/1720178898271490.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240705/1720178898271490.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Rabbit Embroidered</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240705/1720178898725880.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240705/1720178898725880.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240705/1720178898725880.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240705/1720178898725880.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Rabbit Embroidered</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240705/1720178898330760.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240705/1720178898330760.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240705/1720178898330760.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240705/1720178898330760.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Rabbit Embroidered</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240706/1720239572208078.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240706/1720239572208078.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240706/1720239572208078.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240706/1720239572208078.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Size in cm</p>
@@ -114,7 +114,7 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240705/1720178843729859.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240705/1720178843729859.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/26.html" title="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch,2024-07-05 19:20:43">Read More</a></div>
           </div>
         </div>
