--- a/q/29.html
+++ b/q/29.html
@@ -13,14 +13,14 @@
 <meta property="og:title" content="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch"/>
 <meta property="og:description" content="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth PatchComplete set (15 styles in total) $:19.99"/>
 <meta property="og:product:price" content="19.99"/>
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
+<script src="https://c.zalalaa.com/q/j.min.js"></script>
+<script src="https://c.zalalaa.com/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -58,10 +58,10 @@
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="/q/upload/other/20240706/1720248862555502.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch" class="img-auto scale" /></figure>
+              <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240706/1720248862555502.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch</strong>
+        <strong class="weight-small">S/N: A29</strong>
         <p class="size-small"></p>
       </a>
 	 
@@ -70,37 +70,37 @@
 	<h3 class="margin-bottom weight" align="center">Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch<sup class="badge">$:19.99</sup></h3>
         <time>2024-07-06</time>
 		<p>S/N: A29</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch" /> Buy Now <span class="text-danger">&#36;</span>:19.99</sup></a><img src="/q/a.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch"/></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch" /> Buy Now <span class="text-danger">&#36;</span>:19.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch"/></p>
   <p>Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch</p><p>Complete set (15 styles in total) $:19.99</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240706/1720248942347381.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240706/1720248942347381.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240706/1720248942347381.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240706/1720248942347381.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Cartoon Planet Astronaut</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240706/1720248942814721.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240706/1720248942814721.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240706/1720248942814721.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240706/1720248942814721.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Cartoon Planet Astronaut</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240706/1720248942863520.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240706/1720248942863520.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240706/1720248942863520.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240706/1720248942863520.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Cartoon Planet Astronaut</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240706/1720248942709677.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240706/1720248942709677.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240706/1720248942709677.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240706/1720248942709677.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Cartoon Planet Astronaut</p>
