--- a/q/30.html
+++ b/q/30.html
@@ -13,14 +13,14 @@
 <meta property="og:title" content="Cartoon Panda Cute Embroidered Cloth Sticker"/>
 <meta property="og:description" content="Cartoon Panda Cute Embroidered Cloth StickerComputer Embroidery Seal DIY Bag Decoration Cloth Patch PatchComplete set (6 styles in total) $:9.99"/>
 <meta property="og:product:price" content="9.99"/>
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
+<script src="https://c.zalalaa.com/q/j.min.js"></script>
+<script src="https://c.zalalaa.com/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -58,10 +58,10 @@
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="/q/upload/other/20240706/1720249515387478.webp" alt="Cartoon Panda Cute Embroidered Cloth Sticker" class="img-auto scale" /></figure>
+              <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240706/1720249515387478.webp" alt="Cartoon Panda Cute Embroidered Cloth Sticker" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Cartoon Panda Cute Embroidered Cloth Sticker</strong>
+        <strong class="weight-small">S/N: A30</strong>
         <p class="size-small"></p>
       </a>
 	 
@@ -70,44 +70,44 @@
 	<h3 class="margin-bottom weight" align="center">Cartoon Panda Cute Embroidered Cloth Sticker<sup class="badge">$:9.99</sup></h3>
         <time>2024-07-06</time>
 		<p>S/N: A30</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Cartoon Panda Cute Embroidered Cloth Sticker" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a><img src="/q/a.webp" alt="Cartoon Panda Cute Embroidered Cloth Sticker"/></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Cartoon Panda Cute Embroidered Cloth Sticker" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Cartoon Panda Cute Embroidered Cloth Sticker"/></p>
   <p>Cartoon Panda Cute Embroidered Cloth Sticker</p><p>Computer Embroidery Seal DIY Bag Decoration Cloth Patch Patch</p><p>Complete set (6 styles in total) $:9.99&nbsp;<br/></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240706/1720249523715253.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240706/1720249523715253.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240706/1720249523715253.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240706/1720249523715253.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Cartoon Panda</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240706/1720249523509405.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240706/1720249523509405.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240706/1720249523509405.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240706/1720249523509405.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Cartoon Panda</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240706/1720249523525755.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240706/1720249523525755.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240706/1720249523525755.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240706/1720249523525755.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Cartoon Panda</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240706/1720249523976968.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240706/1720249523976968.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240706/1720249523976968.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240706/1720249523976968.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Cartoon Panda</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240706/1720249523695175.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240706/1720249523695175.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240706/1720249523695175.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240706/1720249523695175.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Cartoon Panda</p>
