--- a/q/abouts/index.html
+++ b/q/abouts/index.html
@@ -8,14 +8,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
 <meta name="theme-color" content="#32CD32">
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
+<script src="https://c.zalalaa.com/q/j.min.js"></script>
+<script src="https://c.zalalaa.com/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -44,7 +44,7 @@
     <div class="big-x4">
       <a class="padding block text-white discovers-main" href="/q/logo.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-           <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/logo.webp" alt="Zalalaa" class="img-auto scale" /> </figure>
+           <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/logo.webp" alt="Zalalaa" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-search-bg text-main"></i></div>
         </div>
         <strong class="weight-small">Zalalaa</strong>
@@ -52,7 +52,69 @@
       </a>
     </div>
     <div class="big-x8">
-      <p>Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.&nbsp;</p><p>Fashion and high quality lace make customers extraordinary.</p><p>Email: web@zalalaa.com</p><p><br/></p><p><span style="background-color: rgb(255, 255, 0);">Free shipping for stores over $200</span></p><p><img src="/q/py.webp"/></p><p>9050150@qq.com</p><p><br/></p><p><img src="/q/a.webp"/></p><p><br/></p><p>How to remit to Alipay?</p><p>&nbsp; Where can I send money?</p><p>&nbsp; https://remit.alipay.com</p><p>&nbsp; What information should I fill in at the money transfer platform?</p><p>&nbsp; Alipay ID (账号)</p><p>&nbsp; 9050150@qq.com</p><p>&nbsp; Last Name(姓)</p><p>&nbsp; LI</p><p>&nbsp; First Name(名)</p><p>&nbsp; QUAN</p><p><br/></p>
+      <p>
+    Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.&nbsp;
+</p>
+<p>
+    Fashion and high quality lace make customers extraordinary.
+</p>
+<p>
+    Email: web@zalalaa.com
+</p>
+<p>
+    <br/>
+</p>
+<p>
+    <span style="background-color: rgb(255, 255, 0);">Free shipping for stores over $200</span>
+</p>
+<p>
+    <img src="https://c.zalalaa.com/q/py.webp"/>
+</p>
+<p>
+    9050150@qq.com
+</p>
+<p>
+    <br/>
+</p>
+<p>
+    <img src="https://c.zalalaa.com/q/a.webp"/>
+</p>
+<p>
+    <br/>
+</p>
+<p>
+    How to remit to Alipay?
+</p>
+<p>
+    &nbsp; Where can I send money?
+</p>
+<p>
+    &nbsp; https://remit.alipay.com
+</p>
+<p>
+    &nbsp; What information should I fill in at the money transfer platform?
+</p>
+<p>
+    &nbsp; Alipay ID (账号)
+</p>
+<p>
+    &nbsp; 9050150@qq.com
+</p>
+<p>
+    &nbsp; Last Name(姓)
+</p>
+<p>
+    &nbsp; LI
+</p>
+<p>
+    &nbsp; First Name(名)
+</p>
+<p>
+    &nbsp; QUAN
+</p>
+<p>
+    <br/>
+</p>
     </div>
   </div>
    <div class="grid big-grid-middle large-grid-large isplit-content">
