--- a/q/flower/index.html
+++ b/q/flower/index.html
@@ -9,14 +9,14 @@
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Clothing accessories, textile products, hand sewn embroidery, three-dimensional embroidery, flower cloth stickers, hand nailed flower embroidery badges, cheongsam flowers">
 <meta name="theme-color" content="#32CD32">
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
+<script src="https://c.zalalaa.com/q/j.min.js"></script>
+<script src="https://c.zalalaa.com/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -40,24 +40,16 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">9</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">16</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">11</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">15</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">Flower</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
-      <a class="big-x3 flex flex-column" href="/q/32.html" title="Cartoon flower butterfly embroidered fabric patch,2024-07-06 15:21:51">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720251451442410.webp"  alt="Cartoon flower butterfly embroidered fabric patch" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small">S/N: A32 <span class="text-danger">&#36;</span>:29.99</strong>
-        <p class="size-small flex-grow">Embroidered badges, cartoons, flowers, butterflies, embroide···</p>
-      </a>
       <a class="big-x3 flex flex-column" href="/q/24.html" title="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719827829205743.webp"  alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240701/1719827829205743.webp"  alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A24 <span class="text-danger">&#36;</span>:9.99</strong>
@@ -65,7 +57,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/23.html" title="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719826678821251.webp"  alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240701/1719826678821251.webp"  alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A23 <span class="text-danger">&#36;</span>:29.99</strong>
@@ -73,7 +65,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800738209747.webp"  alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240701/1719800738209747.webp"  alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A22 <span class="text-danger">&#36;</span>:12</strong>
@@ -81,7 +73,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240626/1719391194190860.webp"  alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240626/1719391194190860.webp"  alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A18 <span class="text-danger">&#36;</span>:12.99</strong>
@@ -89,7 +81,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/17.html" title="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800181983602.webp"  alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery." class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240701/1719800181983602.webp"  alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery." class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A17 <span class="text-danger">&#36;</span>:12.99</strong>
@@ -97,7 +89,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719794556332881.webp"  alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240701/1719794556332881.webp"  alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A16 <span class="text-danger">&#36;</span>:12.99</strong>
@@ -105,7 +97,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719794420979065.webp"  alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240701/1719794420979065.webp"  alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A15 <span class="text-danger">&#36;</span>:12.99</strong>
@@ -113,7 +105,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/14.html" title="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719805636338260.webp"  alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240701/1719805636338260.webp"  alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A14 <span class="text-danger">&#36;</span>:29.99</strong>
@@ -121,7 +113,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240630/1719760090198490.webp"  alt="Embroidery flower bud lace flower applique" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240630/1719760090198490.webp"  alt="Embroidery flower bud lace flower applique" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A13 <span class="text-danger">&#36;</span>:13.99</strong>
@@ -129,7 +121,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800847146446.webp"  alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240701/1719800847146446.webp"  alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A11 <span class="text-danger">&#36;</span>:9.99</strong>
@@ -137,7 +129,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240630/1719759794881169.webp"  alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240630/1719759794881169.webp"  alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A10 <span class="text-danger">&#36;</span>:12.99</strong>
@@ -145,7 +137,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/9.html" title="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240630/1719759342917874.webp"  alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240630/1719759342917874.webp"  alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A9 <span class="text-danger">&#36;</span>:9.99</strong>
@@ -153,7 +145,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/8.html" title="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719819186655198.webp"  alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240701/1719819186655198.webp"  alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A8 <span class="text-danger">&#36;</span>:12.99</strong>
@@ -161,7 +153,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/4.html" title="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719806402155946.webp"  alt="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240701/1719806402155946.webp"  alt="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A4 <span class="text-danger">&#36;</span>:12.99</strong>
@@ -169,7 +161,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/2.html" title="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719821466380643.webp"  alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240701/1719821466380643.webp"  alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">S/N: A2 <span class="text-danger">&#36;</span>:9.99</strong>
