--- a/q/job_2/index.html
+++ b/q/job_2/index.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
 <meta name="theme-color" content="#32CD32">
-<link rel="canonical" href="http://za.com/ad.php?p=/MakeHtml/index&type=2&date=2024-07-06">
+<link rel="canonical" href="http://za.com/ad.php?p=/MakeHtml/index&type=2&date=2024-07-07">
 <link rel="stylesheet" href="/q/p.min.css">
 <link rel="stylesheet" href="/q/p.css">
 <script src="/q/j.min.js"></script>
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/index.html"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
       <li><a href="/index.html" title="Home">Home</a></li>
@@ -41,7 +41,7 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/animal/" title="Animal">Animal <span class="badge">9</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/" title="Flower">Flower <span class="badge">16</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/animal/" title="Animal">Animal <span class="badge">11</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/" title="Flower">Flower <span class="badge">15</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
